Add Apache CXF 4.* support