@@ -1,5 +1,4 @@
 scriptedLaunchOpts ++= Seq(
   "-Xmx1024M",
-  "-XX:MaxPermSize=256M",
-  s"-Dplugin.version=${(version in ThisBuild).value}"
+  s"-Dplugin.version=${(ThisBuild / version).value}"
 )
